<resources>
    <string name="app_name">Scrumer</string>

    <!--main activity-->
    <string name="main_txt_home">Home</string>
    <string name="main_txt_deving">Deving</string>
    <string name="main_txt_totest">ToTest</string>
    <string name="main_txt_testing">Testing</string>
    <string name="main_txt_done">Done</string>

    <!--login activity-->
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_txt_btnlogin">登录</string>
    <string name="login_txt_btnregister">注册</string>
    <string name="login_toast_emptyname">用户名不能为空</string>
    <string name="login_toast_emptypassword">密码不能为空</string>
    <string name="login_toast_login_error">用户名或密码不正确</string>
    <string name="login_toast_request_error">登录请求失败</string>


    <!--storydetail-->
    <string name="storydetail_txt_title">User Story</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project">ProjectActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_project_edit">ProjectEditActivity</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_team_edit">TeamEditActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="register_toast_name_notnull">用户名不能为空</string>
    <string name="register_toast_password_notnull">密码不能为空</string>
    <string name="register_toast_confirm_notequal">两次密码不一致</string>
    <string name="register_toast_name_isexist">用户名\'%s\'已经存在</string>
    <string name="register_toast_success">注册成功，请重新登录</string>
    <string name="toast_parseerror">数据解析错误</string>
    <string name="teamedit_toast_name_not_null">团队名称不能为空</string>
    <string name="projectedit_toast_name_notnull">项目名称不能为空</string>
</resources>
