<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mimo="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearlayout_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg_color_green_light"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/headbar_height"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/headbar_padding"
        android:paddingRight="@dimen/headbar_padding">

        <RelativeLayout
            android:id="@+id/main_menu_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/main_title_more"
                android:layout_width="@dimen/main_more_vert_size"
                android:layout_height="@dimen/main_more_vert_size"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_more_vert_white_24dp" />

            <com.tanyixiu.widgets.CircleImageView
                android:layout_width="@dimen/main_photo_size"
                android:layout_height="@dimen/main_photo_size"
                android:layout_centerVertical="true"
                android:layout_marginStart="-5dp"
                android:layout_toEndOf="@id/main_title_more"
                android:src="@drawable/photo"
                mimo:border_color="@color/bkg_color_white"
                mimo:border_width="@dimen/circleimg_border_width" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headbar_text_size" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/bkg_color_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_tab_home"
            style="@style/style_main_tab"
            android:drawableTop="@drawable/ic_home_white_24dp"
            android:text="@string/main_txt_home" />

        <TextView
            android:id="@+id/main_tab_deving"
            style="@style/style_main_tab"
            android:drawableTop="@drawable/ic_place_white_24dp"
            android:text="@string/main_txt_deving" />

        <TextView
            android:id="@+id/main_tab_totest"
            style="@style/style_main_tab"
            android:drawableTop="@drawable/ic_toys_white_24dp"
            android:text="@string/main_txt_totest" />

        <TextView
            android:id="@+id/main_tab_testing"
            style="@style/style_main_tab"
            android:drawableTop="@drawable/ic_directions_run_white_24dp"
            android:text="@string/main_txt_testing" />

        <TextView
            android:id="@+id/main_tab_done"
            style="@style/style_main_tab"
            android:drawableTop="@drawable/ic_track_changes_white_24dp"
            android:text="@string/main_txt_done" />
    </LinearLayout>

</LinearLayout>